@@ -1,4 +1,5 @@
-(module pict-test mzscheme
+#lang racket/base
+(require racket/file)
   ;; these tests just make sure that errors don't
   ;; happen. These tests are really only last resorts
   ;; for testing functions that aren't easily extraced
@@ -14,30 +15,32 @@
   (define-language var-ab
     [var (a 
           b)])
-  (render-language var-ab)
+  (void (render-language var-ab))
   
   (define-language var-not-ab
     [var (variable-except x
                           y)])
-  (render-language var-not-ab)
+  (void (render-language var-not-ab))
   
   (let ()
     (define-metafunction empty-language [(zero any_in) 0])
-    (render-metafunction zero))
+    (void (render-metafunction zero)))
 
-  (render-reduction-relation
-   (reduction-relation
-    empty-language
-    (--> number_const
-         ,(term
-           (+ number_const 0)))))
+  (void
+   (render-reduction-relation
+    (reduction-relation
+     empty-language
+     (--> number_const
+          ,(term
+            (+ number_const 0))))))
   
-  (render-reduction-relation 
-   (reduction-relation
-    empty-language
-    (--> a b
-         (fresh x)
-         (fresh y))))
+  (void
+   (render-reduction-relation 
+    (reduction-relation
+     empty-language
+     (--> a b
+          (fresh x)
+          (fresh y)))))
   
 
   (define-language x1-9 
@@ -46,6 +49,10 @@
   (define-extended-language x0-10 x1-9
     (x 0 .... 10))
   
-  (render-language x0-10)
+  (void (render-language x0-10))
   
-  (printf "pict-test.rkt passed\n"))
+  (let ([tmp (make-temporary-file "redex-pict-test~a.pdf")])
+    (render-language x0-10 tmp)
+    (delete-file tmp))
+  
+  (printf "pict-test.rkt passed\n")
